--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -6,21 +6,21 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<script src="https://fb.me/react-0.14.3.js"></script>
 	<script src="https://fb.me/react-dom-0.14.3.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
 </head>
 <body>
 
 	<div id="react-container">
 	</div>
 
-	<script>
+	<script type="text/babel">
 		ReactDOM.render(
 			// Parent Element
-			React.createElement('ul', null,
-				// Child elements
-				React.createElement('li', null, 'Item 1'),
-				React.createElement('li', null, 'Item 2'),
-				React.createElement('li', null, 'Item 3')
-			),
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>,
 			// Where the elements go
 			document.getElementById('react-container')
 		);
