--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -15,13 +15,11 @@
 
 	<script type="text/babel">
 
-		class MyComponent extends React.Component {
-			render() {
-				return <div>
-					<h1>Hello World</h1>
-					<p>This is my first React component!</p>
-				</div>	
-			}
+		const MyComponent = () => {
+			return <div>
+				<h1>Hello World</h1>
+				<p>This is my first React component!</p>
+			</div>	
 		}
 
 		ReactDOM.render(<MyComponent />,
