Getting property text using props.children method

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -19,17 +19,24 @@
 			render() {
 				return <div>
 					<h1>{this.props.text}</h1>
-					<p>This is my first React component!</p>
+					<p>{this.props.children}</p>
 				</div>					
 			}
 		});
 
 		ReactDOM.render(<div>
-				<MyComponent text="Hello World" />
-				<MyComponent text="I am a component" />
-				<MyComponent text="I have been reused" />
+				<MyComponent text="Hello World">
+					This is message 1 
+				</MyComponent>
+				<MyComponent text="I am a component">
+					This is message 2
+				</MyComponent>
+				<MyComponent text="I have been reused">
+					This is message 3
+				</MyComponent>
 			</div>,
-			document.getElementById('react-container'))
+		document.getElementById('react-container'));
+
 	</script>
 
 </body>
