--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -7,35 +7,14 @@
 	<script src="https://fb.me/react-0.14.3.js"></script>
 	<script src="https://fb.me/react-dom-0.14.3.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-	<div id="react-container">
-	</div>
+	<div id="react-container"></div>
 
 	<script type="text/babel">
 
-		var MyComponent = React.createClass({
-			render() {
-				return <div>
-					<h1>{this.props.text}</h1>
-					<p>{this.props.children}</p>
-				</div>					
-			}
-		});
-
-		ReactDOM.render(<div>
-				<MyComponent text="Hello World">
-					This is message 1 
-				</MyComponent>
-				<MyComponent text="I am a component">
-					This is message 2
-				</MyComponent>
-				<MyComponent text="I have been reused">
-					This is message 3
-				</MyComponent>
-			</div>,
-		document.getElementById('react-container'));
 
 	</script>
 
