--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -15,6 +15,31 @@
 
 	<script type="text/babel">
 
+		var Note = React.createClass({
+			edit(){
+				alert("Editing note");
+			},
+			remove(){
+				alert("Removing note");
+			},
+			render() {
+				return (
+					<div className="note">
+						<p>{this.props.children}</p>
+						<span>
+							<button onClick={this.edit}>Edit</button>
+							<button onClick={this.remove}>X</button>
+						</span>
+					</div>
+				)
+			}
+
+		});
+
+		ReactDOM.render(
+			<Note>Hello World</Note>,
+			document.getElementById('react-container')
+		);
 
 	</script>
 
