Updated previous commit to us onChange instead of onClick

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -52,7 +52,7 @@
 				}
 				return (
 					<div>
-						<input type="Checkbox" onClick={this.handleCheck} />
+						<input type="Checkbox" onChange={this.handleCheck} />
 						<p>This box is {msg}</p>
 					</div>
 				)
