--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -48,11 +48,7 @@
 				)
 			},
 			render() {
-				if (this.state.editing) {
-					return this.renderForm()
-				} else {
-					return this.renderDisplay();
-				}
+				return (this.state.editing) ? this.renderForm(): this.renderDisplay();
 			}
 
 		});
