Uses a 'ref' to grab the value from the form elemement and alert it

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -23,6 +23,8 @@
 				this.setState({editing: true});
 			},
 			save(){
+				var val = this.refs.newText.value;
+				alert("Later we will save this value: " + val)
 				this.setState({editing: false});
 			},
 			remove(){
@@ -31,7 +33,7 @@
 			renderForm(){
 				return (
 					<div className="note">
-						<textarea></textarea>
+						<textarea ref="newText"></textarea>
 						<button onClick={this.save}>Save</button>
 					</div>
 				)
