--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -23,12 +23,11 @@
 				this.setState({editing: true});
 			},
 			save(){
-				var val = this.refs.newText.value;
-				alert("Later we will save this value: " + val)
-				this.setState({editing: false});
+				this.props.onChange(this.refs.newText.value, this.props.id);
+				this.setState({editing:false});
 			},
 			remove(){
-				alert("Removing note");
+				this.props.onRemove(this.props.id);
 			},
 			renderForm(){
 				return (
@@ -73,21 +72,44 @@
 
 			getInitialState() {
 				return {
-					notes: [
-						'Call Bob',
-						'Email Sarah',
-						'Eat lunch',
-						'Finish proposal'
+					notes: [ 
+					{id: 0, note: 'Call Bob'},
+					{id: 1, note: 'Email Sarah'},
+					{id: 2, note: 'eat Lunnch'},
+					{id: 3, note: 'Finish proposal'}
 					]
 				}
+			},
+
+			update(newtext,id){
+				var notes = this.state.notes.map(
+					note => (note.id) !== id) ?
+						note : 
+						...note,
+						note: newText
+				);
+
+				this.setState({notes});
+			},
+
+			remove(id) {
+				var notes = this.state.notes.filter(note => note.id !== id);
+				this.setState({notes});
+			},
+
+			eachNote(note) {
+				return <Note 
+						key={i} 
+						id={note.id}
+						onChange={this.update}
+						onRemove={this.remove}>{note.note}
+					</Note>
 			},
 
 			render() {
 				return (
 					<div className='board'>
-						{this.state.notes.map((note,i) => {
-							return <Note key={i}>{note}</Note>
-						})}
+						{this.state.notes.map(this.eachNote)}
 					</div>
 				)
 			}
