It can add one note when the plus button is pushed

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -72,17 +72,30 @@
 
 			getInitialState() {
 				return {
-					notes: [ 
-						{id: 0, note: 'Call Bob'},
-						{id: 1, note: 'Email Sarah'},
-						{id: 2, note: 'Eat Lunch'},
-						{id: 3, note: 'Finish proposal'}
-					]
+					notes: []
 				}
+			},
+
+			// Generates new ID
+			nextId() {
+				this.uniqueId = this.unqiueId || 0
+				return this.uniqueId++
+			},
+
+			add(text) {
+				var notes = [
+					...this.state.notes,
+					{
+						id: this.nextId(),
+						note: text
+					}
+				];
+				this.setState({notes});
 			},
 
 			update(newText,id) {
 				var notes = this.state.notes.map(
+					// Huh, guess this spread operator is part of ES6
 					note => (note.id !== id) ? note : {...note, note: newText}
 				);
 				this.setState({notes});
@@ -105,6 +118,7 @@
 			render() {
 				return (<div className='board'>
 						{this.state.notes.map(this.eachNote)}
+						<button onClick={() => this.add()}>+</button>
 					</div>)
 			}
 		});
