Adding default text that says 'New Note', still can only make one note because of error

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -118,7 +118,7 @@
 			render() {
 				return (<div className='board'>
 						{this.state.notes.map(this.eachNote)}
-						<button onClick={() => this.add()}>+</button>
+						<button onClick={() => this.add("New note")}>+</button>
 					</div>)
 			}
 		});
