Fixing bug that was stopping it from making multiple notes -- I mispelled 'uniqueId' in one instance in the nextId() function

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -78,7 +78,7 @@
 
 			// Generates new ID
 			nextId() {
-				this.uniqueId = this.unqiueId || 0
+				this.uniqueId = this.uniqueId || 0
 				return this.uniqueId++
 			},
 
