Notes now get added at random locations on the board

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -19,8 +19,17 @@
 			getInitialState() {
 				return {editing: false}
 			},
+			componentWillMount(){
+				this.style = {
+					right: this.randomBetween(0, window.innerWidth - 150, 'px'),
+					top: this.randomBetween(0, window.innerHeight - 150, 'px' )
+				}
+			},
 			edit(){
 				this.setState({editing: true});
+			},
+			randomBetween(x,y,s) {
+				return (x + Math.ceil(Math.random() * (y-x))) + s
 			},
 			save(){
 				this.props.onChange(this.refs.newText.value, this.props.id);
@@ -31,7 +40,8 @@
 			},
 			renderForm(){
 				return (
-					<div className="note">
+					<div className="note"
+						style={this.style}>
 						<textarea ref="newText"></textarea>
 						<button onClick={this.save}>Save</button>
 					</div>
@@ -39,7 +49,8 @@
 			},
 			renderDisplay(){
 				return (
-					<div className="note">
+					<div className="note"
+						style={this.style}>
 						<p>{this.props.children}</p>
 						<span>
 							<button onClick={this.edit}>Edit</button>
