Did Chapter 5, lesson 5 example, demonstrating Component Lifecycle methods: componentWillMount, componentDidMount, & unmountComponentAtNode

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -19,6 +19,7 @@
 			getInitialState() {
 				return {editing: false}
 			},
+			// componentWillMount method runs right before elements are rendered
 			componentWillMount(){
 				this.style = {
 					right: this.randomBetween(0, window.innerWidth - 150, 'px'),
