--- a/lynda-course-learning-react-js/ch-05-05/index.html
+++ b/lynda-course-learning-react-js/ch-05-05/index.html
@@ -5,30 +5,25 @@
         <script src="https://fb.me/react-dom-15.2.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
         <title>Component Lifecycle</title>
-        <style type="text/css">
-
-            #myDiv {
-
-                background-color: blue;
-                height: 200px;
-                width: 200px;
-
-            }
-
-        </style>
     </head>
     <body>
         <div id='react-container'></div>
         <script type="text/babel">
             var Box = React.createClass({
-                componentWillMount() {
-                    alert('Component is about to mount.');
-                },
-                componentDidMount() {
-                    alert('Component just mounted');
+                getDefaultProps() {
+                    return {
+
+                        backgroundColor: 'purple',
+                        height: 200,
+                        width: 200
+
+                    }
                 },
                 render() {
-                    return <div id="myDiv"></div>
+                    return (<div id="myDiv">
+                            <div style={this.props}>
+                            </div>
+                        </div>)
                 }
             })
             ReactDOM.render(
@@ -36,11 +31,6 @@
                 document.getElementById('react-container')
             )
 
-            var getRidOfBox = document.getElementById('myDiv');
-            getRidOfBox.onclick = function() {
-                ReactDOM.unmountComponentAtNode(document.getElementById('react-container'));
-                alert('Component is unmounted');
-            }
 
         </script>
 
