--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -7,6 +7,9 @@
 	<script src="https://fb.me/react-0.14.3.js"></script>
 	<script src="https://fb.me/react-dom-0.14.3.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.js">
+    </script>
+    <script src="https://npmcdn.com/react-draggable"></script>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,6 +34,9 @@
 					this.refs.newText.focus()
 					this.refs.newText.select()
 				}
+			},
+			shouldComponentUpdate(nextProps, nextState) {
+				return this.props.children !== nextProps.children || this.state !== nextState
 			},
 			edit(){
 				this.setState({editing: true});
@@ -91,6 +97,22 @@
 			getInitialState() {
 				return {
 					notes: []
+				}
+			},
+
+			componentWillMount() {
+				if(this.props.count) {
+					var url = `https://baconipsum.com/api/?type=all-meat&sentences=${this.props.count}`
+					fetch(url)
+						.then(results => results.json())
+						.then(array => array[0])
+						.then(text => text.split('. '))
+						.then(array => array.forEach(
+							sentence => this.add(sentence)
+						))
+						.catch(function(err) {
+							console.log("Didn't connect to the API", err)
+						})
 				}
 			},
 
