ReactDraggable works now, notes can now be dragged around the board

--- a/lynda-course-learning-react-js/index.html
+++ b/lynda-course-learning-react-js/index.html
@@ -73,7 +73,10 @@
 				)
 			},
 			render() {
-				return (this.state.editing) ? this.renderForm(): this.renderDisplay();
+				return (<ReactDraggable>
+					{(this.state.editing) ? this.renderForm() : this.renderDisplay()}
+				</ReactDraggable>
+				)
 			}
 
 		});
